--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1,4 +1,8 @@
 {
+    "account.label" : "Mon compte",
+    "account.sentence" : "Modifier votre compte",
+
+
     "navbar.home": "Accueil",
     "navbar.contact": "Contactez-nous",
     "navbar.informations": "Informations",
