--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -60,6 +60,7 @@
     "addPost.field.description": "Description",
     "informations.title": "What are the penalties for sexist remarks?",
     "informations.content": "The content of this article is up to date with regard to the law applicable on 28.09.2018. In particular, it incorporates the amendments made by Law No. 2018-703 of 3 August 2018 strengthening the fight against sexual and gender-based violence.\r\n        Sexist insult is a manifestation of sexism, which is expressed through behaviour with a sexual or sexist connotation, which, regardless of the space in which it is expressed or the forms it takes, undermines the dignity of the person because of its degrading or humiliating nature, and creates an intimidating, hostile or offensive situation. Such conduct need not be repeated for the offence to be characterized.\r\n        Materially, it may be :\r\n        \r\n        Whistling, obscene gestures and\/or sounds, such as suggesting or imitating a sexual act;\r\n        sexual proposals or intrusive questions about sex life;\r\n        degrading comments about appearance or dress;\r\n        following a person persistently on the street.\r\n        Article 621-1 of the Penal Code punishes sexist insults.\r\n        \r\n        Apart from cases of violence, exhibition, sexual or moral harassment, sexist insult is the act of imposing on any person any comment or behaviour with a sexual or sexist connotation that :\r\n        \r\n        Either violates his or her dignity because of its degrading or humiliating nature;\r\n        Creates an intimidating, hostile or offensive situation against him\/her.\r\n        The penalty incurred is a fine of up to \u20AC90 for a 4th class offence (up to \u20AC750 for immediate payment) or up to \u20AC750 for a 5th class offence (up to \u20AC1,500) in the event of aggravating circumstances or a repeat offence.\r\n\r\n",
+    
     "backoffice.general.submit": "submit",
     "backoffice.general.back": "back",
     "backoffice.general.delete": "delete",
@@ -67,9 +68,10 @@
     "backoffice.general.prev": "prev",
     "backoffice.general.next": "next",
     "backoffice.general.search": "search",
-    "backoffice.general.currentPage": "The actual page is :",
+    "backoffice.general.currentPage": "The actual page is ",
     "backoffice.title": "BackOffice Menu",
     "backoffice.menu1": "Manage Data",
+
     "backoffice.menu1.posts.title": "Posts",
     "backoffice.menu1.posts.titlePage": "Manage Post",
     "backoffice.menu1.posts.field.title": "Title",
@@ -83,12 +85,68 @@
     "backoffice.menu1.posts.edit.title": "Title",
     "backoffice.menu1.posts.edit.description": "Description",
     "backoffice.menu1.posts.edit.category": "Category",
-    "backoffice.menu1.user.title": "User",
+    
+    "backoffice.menu1.user.title":"Users",
+    "backoffice.menu1.users.title": "Users",
+    "backoffice.menu1.users.titlePage": "Manage User",
+    "backoffice.menu1.users.field.username": "Username",
+    "backoffice.menu1.users.field.firstname": "Firstname",
+    "backoffice.menu1.users.field.action": "Action",
+    "backoffice.menu1.users.create.label": "New User",
+    "backoffice.menu1.users.create.username": "Username",
+    "backoffice.menu1.users.create.firstname": "Firstname",
+    "backoffice.menu1.users.create.lastname": "Lastname",
+    "backoffice.menu1.users.create.password": "Password",
+    "backoffice.menu1.users.create.mail": "Mail",
+    "backoffice.menu1.users.create.birthday": "Birthday",
+    "backoffice.menu1.users.create.sexe": "Sexe",
+    "backoffice.menu1.users.edit.label": "Edit User",
+
     "backoffice.menu1.postC.title": "Post Category",
+    "backoffice.menu1.postC.titlePage": "Manage Post Category",
+    "backoffice.menu1.postC.field.description": "Description",
+    "backoffice.menu1.postC.field.couleur": "Color",
+    "backoffice.menu1.postC.field.action": "Action",
+    "backoffice.menu1.postC.create.label": "New Category",
+    "backoffice.menu1.postC.create.description": "Description",
+    "backoffice.menu1.postC.create.color": "Color",
+    "backoffice.menu1.postC.edit.label": "Edit Category",
+
+    
     "backoffice.menu1.commmentC.title": "Comment Category",
+    "backoffice.menu1.commmentC.titlePage": "Manage Comment Category",
+    "backoffice.menu1.commmentC.field.description": "Description",
+    "backoffice.menu1.commmentC.field.couleur": "Color",
+    "backoffice.menu1.commmentC.field.action": "Action",
+    "backoffice.menu1.commmentC.create.label": "New Category",
+    "backoffice.menu1.commmentC.create.description": "Description",
+    "backoffice.menu1.commmentC.create.color": "Color",
+    "backoffice.menu1.commmentC.edit.label": "Edit Category",
+
     "backoffice.menu2": "Manage Reports",
     "backoffice.menu2.comment.title": "Comment report",
+    "backoffice.menu2.comment.count": "Count",
+    "backoffice.menu2.comment.description": "Description",
+    "backoffice.menu2.comment.action": "Action",
+
     "backoffice.menu2.post.title": "Post report",
+    "backoffice.menu2.post.count": "Count",
+    "backoffice.menu2.post.description": "Description",
+    "backoffice.menu2.post.action": "Action",
+
+    "backoffice.menuUser.title":"User Page",
+    "backoffice.menuUser.information":"Informations",
+    "backoffice.menuUser.firstname":"Firstname",
+    "backoffice.menuUser.lastname":"Lastname",
+    "backoffice.menuUser.username":"Username",
+    "backoffice.menuUser.mail":"Mail",
+    "backoffice.menuUser.actions":"Actions",
+    "backoffice.menuUser.post":"His post",
+    "backoffice.menuUser.comment":"His comment",
+    "backoffice.menuUser.modify":"Modify",
+    "backoffice.menuUser.delete":"Delete",
+
+
     "error.commentValue": "Please enter a comment",
     "error.titleValue": "Please enter a title",
     "error.descriptionValue": "Please enter a description",
