--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1,85 +1,183 @@
 {
-    "account.label" : "Mon compte",
-    "account.sentence" : "Modifier votre compte",
-    "register.label" : "S'inscrire",
-
-
     "navbar.home": "Accueil",
     "navbar.contact": "Contactez-nous",
     "navbar.informations": "Informations",
-    "navbar.backoffice":"BackOffice",
-    "navbar.language":"Langue",
-
-
-    "login":"Connexion",
-    "Logout":"Déconnexion",
-    "backoffice.general.submit":"envoyer",
-    "backoffice.general.back":"retour",
-    "backoffice.general.delete":"supprimer",
-    "backoffice.general.cancel":"retour",
-    "backoffice.general.prev":"reculer",
-    "backoffice.general.next":"avancer",
-    "backoffice.general.search":"chercher",
-    "backoffice.general.currentPage":"La page actuelle est :",
+    "navbar.backoffice": "BackOffice",
+    "navbar.language": "Langage",
+    "login": "Connexion",
+    "Logout": "Déconnexion",
+    "account.label": "Mon compte",
+    "account.sentence": "Modifie ton compte",
+    "post.delete": "Supprimer un post",
+    "post.add": "Ajout d'un post",
+    "delete": "Suprrimer",
+    "delete.confirm": "Es-tu sur de supprimer ce post ?",
+    "delete.comment": "Supprimer un commentaire",
+    "delete.comment.confirm": "Es-tu sur de supprimer ce commentaire",
+    "error.comment.login": "Connectez-vous pour ajouter un commentaire",
+    "error.post.login": "Connectez-vous pour ajouter un post",
+    "comment.add": "Ajouter un commentaire",
+    "comment.anonyme": "commentaire anonyme",
+    "post.anonyme": "post anonyme",
+    "post.title": "titre du post",
+    "send": "Envoyer",
+    "cancel": "Annuler",
+    "nocomment": "pas de commentaire",
+    "post.notfound": "Post non trouvé",
+    "login.popupLabel": "Connexion",
+    "login.label": "Connexion",
+    "login.submit": "Envoyer",
+    "login.sentence": "Connectez-vous avant",
+    "login.field.username": "Username",
+    "login.field.password": "Mot de passe",
+    "login.bottom.signup": "Inscription",
+    "login.bottom.forgot": "Mot de passe oublié",
+    "login.bottom.needHelp": "Besoin d'aide ?",
+    "register.label": "Inscription",
+    "register.popupLabel": "Inscription",
+    "register.submit": "Envoyer",
+    "register.sentence": "Entrez vos informations",
+    "register.field.firstname": "Prénom",
+    "register.field.lastname": "Nom",
+    "register.field.mail": "Mail",
+    "register.field.birthday": "Date naissance",
+    "register.field.sexe": "Sexe",
+    "register.field.username": "Username",
+    "register.field.password": "Mot de passe",
+    "register.field.passwordConfirmation": "confirmation du MDP",
+    "register.bottom.alreadyRegister": "Déja inscrit ?",
+    "filter.recent": "Récent",
+    "filter.famous": "Connu",
+    "filter.commented": "plus commenté",
+    "filter.search": "Recherceh...",
+    "addComment.label": "Ajout d'un commentaire",
+    "addComment.textfield": "Commentaire",
+    "addComment.send": "Envoyer",
+    "addPost.popupLabel": "Ajout d'un post",
+    "addPost.label": "Ajout d'un post",
+    "addPost.field.anonymous": "Post anonyme",
+    "addPost.field.title": "titre du post",
+    "addPost.field.description": "Description",
+    "informations.title": "What are the penalties for sexist remarks?",
+    "informations.content": "The content of this article is up to date with regard to the law applicable on 28.09.2018. In particular, it incorporates the amendments made by Law No. 2018-703 of 3 August 2018 strengthening the fight against sexual and gender-based violence.\r\n        Sexist insult is a manifestation of sexism, which is expressed through behaviour with a sexual or sexist connotation, which, regardless of the space in which it is expressed or the forms it takes, undermines the dignity of the person because of its degrading or humiliating nature, and creates an intimidating, hostile or offensive situation. Such conduct need not be repeated for the offence to be characterized.\r\n        Materially, it may be :\r\n        \r\n        Whistling, obscene gestures and\/or sounds, such as suggesting or imitating a sexual act;\r\n        sexual proposals or intrusive questions about sex life;\r\n        degrading comments about appearance or dress;\r\n        following a person persistently on the street.\r\n        Article 621-1 of the Penal Code punishes sexist insults.\r\n        \r\n        Apart from cases of violence, exhibition, sexual or moral harassment, sexist insult is the act of imposing on any person any comment or behaviour with a sexual or sexist connotation that :\r\n        \r\n        Either violates his or her dignity because of its degrading or humiliating nature;\r\n        Creates an intimidating, hostile or offensive situation against him\/her.\r\n        The penalty incurred is a fine of up to \u20AC90 for a 4th class offence (up to \u20AC750 for immediate payment) or up to \u20AC750 for a 5th class offence (up to \u20AC1,500) in the event of aggravating circumstances or a repeat offence.\r\n\r\n",
     
-    "backoffice.title": "Menu BackOffice ",
+    "backoffice.report.validate.post":"êtes vous sur de valider ce post ?",
+    "backoffice.report.validate.comment":"êtes vous sur de valider ce commentaire ?",
+    "backoffice.report.unvalidate.post":"êtes vous sur de dévalider ce post ?",
+    "backoffice.report.unvalidate.comment":"êtes vous sur de dévalider ce commentaire?",
+    "backoffice.delete.title.post":"Suppression de post",
+    "backoffice.delete.title.comment":"Suppression de commentaire",
+    "backoffice.delete.title.commentC":"Suppression de catégorie de commentaire",
+    "backoffice.delete.title.postC": "Suppression de catégorie de post ",
+    "backoffice.delete.title.user":"Suprression d'utilisateur",
+
+    "backoffice.delete.post":"Etes vous sur de supprimer ce post ?",
+    "backoffice.delete.comment":"Etes vous sur de supprimer ce commentaire ?",
+    "backoffice.delete.commentC":"Etes vous sur de supprimer cette catégorie de commentaire?",
+    "backoffice.delete.postC":"Etes vous sur de supprimer cette catégorie de post ?",
+    "backoffice.delete.user":"Etes vous sur de supprimer cet utilisateur",
+
+    "backoffice.general.validate":"valider",
+    "backoffice.general.submit": "envoyer",
+    "backoffice.general.back": "retour",
+    "backoffice.general.delete": "supprimer",
+    "backoffice.general.cancel": "retour",
+    "backoffice.general.prev": "precedent",
+    "backoffice.general.next": "suivant",
+    "backoffice.general.search": "recherche",
+    "backoffice.general.currentPage": "La page ",
+    "backoffice.title": "Menu BackOffice",
     "backoffice.menu1": "Gestion des données",
 
 
-    "backoffice.menu1.posts.title":"Les Posts",
-    "backoffice.menu1.posts.titlePage":"Gestion des posts",
-    "backoffice.menu1.posts.field.title":"Titre",
-    "backoffice.menu1.posts.field.description":"Description",
-    "backoffice.menu1.posts.field.action":"Action",
-    "backoffice.menu1.posts.create.label":"Nouveau post",
-    "backoffice.menu1.posts.create.title":"Titre",
-    "backoffice.menu1.posts.create.description":"Description",
-    "backoffice.menu1.posts.create.category":"Categorie",
+    "backoffice.report.count":"Nombre",
+    "backoffice.report.description":"Description",
+    "backoffice.report.title":"Titre",
+    "bakcoffice.report.action:":"Action",
+    "backoffice.menu1.posts.title": "Posts",
+    "backoffice.menu1.posts.titlePage": "Gestion des posts",
+    "backoffice.menu1.posts.field.title": "Titre",
+    "backoffice.menu1.posts.field.description": "Description",
+    "backoffice.menu1.posts.field.action": "Action",
+    "backoffice.menu1.posts.create.label": "Nouveau Post",
+    "backoffice.menu1.posts.create.title": "Titre",
+    "backoffice.menu1.posts.create.description": "Description",
+    "backoffice.menu1.posts.create.category": "Categorie",
+    "backoffice.menu1.posts.edit.label": "Modification de Post",
+    "backoffice.menu1.posts.edit.title": "Titre",
+    "backoffice.menu1.posts.edit.description": "Description",
+    "backoffice.menu1.posts.edit.category": "Categorie",
+    
+    "backoffice.menu1.user.title":"Utilisateurs",
+    "backoffice.menu1.users.title": "Utilisateurs",
+    "backoffice.menu1.users.titlePage": "Gestion des utilisateurs",
+    "backoffice.menu1.users.field.username": "Username",
+    "backoffice.menu1.users.field.firstname": "Prénom",
+    "backoffice.menu1.users.field.action": "Action",
+    "backoffice.menu1.users.create.label": "Nouvel Utilisateur",
+    "backoffice.menu1.users.create.username": "Username",
+    "backoffice.menu1.users.create.firstname": "Prénom",
+    "backoffice.menu1.users.create.lastname": "Nom",
+    "backoffice.menu1.users.create.password": "Mot de passe",
+    "backoffice.menu1.users.create.mail": "Mail",
+    "backoffice.menu1.users.create.birthday": "Date naissance",
+    "backoffice.menu1.users.create.sexe": "Sexe",
+    "backoffice.menu1.users.edit.label": "Modifier un utilisateur",
 
+    "backoffice.menu1.postC.title": "Catégorie de post",
+    "backoffice.menu1.postC.titlePage": "Gestion des catégories de post",
+    "backoffice.menu1.postC.field.description": "Description",
+    "backoffice.menu1.postC.field.couleur": "Couleur",
+    "backoffice.menu1.postC.field.action": "Action",
+    "backoffice.menu1.postC.create.label": "Nouvelle catégorie",
+    "backoffice.menu1.postC.create.description": "Description",
+    "backoffice.menu1.postC.create.color": "Couleur",
+    "backoffice.menu1.postC.edit.label": "Modifier la catégorie",
 
-    "backoffice.menu1.user.title":"Les utilisateurs",
-    "backoffice.menu1.postC.title":"Les catégories de posts",
-    "backoffice.menu1.commmentC.title":"Les catégories de commentaires",
+    
+    "backoffice.menu1.commmentC.title": "Catégorie de commentaire",
+    "backoffice.menu1.commmentC.titlePage": "Gestino des catégories de commentaire",
+    "backoffice.menu1.commmentC.field.description": "Description",
+    "backoffice.menu1.commmentC.field.couleur": "Couleur",
+    "backoffice.menu1.commmentC.field.action": "Action",
+    "backoffice.menu1.commmentC.create.label": "Nouvelle Categorie",
+    "backoffice.menu1.commmentC.create.description": "Description",
+    "backoffice.menu1.commmentC.create.color": "Couleur",
+    "backoffice.menu1.commmentC.edit.label": "Modifier la catégorie",
+
     "backoffice.menu2": "Gestion des signalements",
-    "backoffice.menu2.comment.title":"Commentaire",
-    "backoffice.menu2.post.title":"Post",
+    "backoffice.menu2.comment.title": "Commentaires",
+    "backoffice.menu2.comment.count": "Nombre",
+    "backoffice.menu2.comment.description": "Description",
+    "backoffice.menu2.comment.action": "Action",
 
-    "informations.title": "Les remarques sexistes, quelles sont les peines?",
-    "informations.content": "Le contenu de cet article est \u00E0 jour au regard du droit applicable au 28.09.2018. Il int\u00E8gre notamment les modifications apport\u00E9es par la loi n\u00B0 2018-703 du 3 ao\u00FBt 2018 renfor\u00E7ant la lutte contre les violences sexuelles et sexistes.\r\n        L\u2019outrage sexiste est une manifestation du sexisme, qui s\u2019exprime par des comportements \u00E0 connotation sexuelle ou sexiste, qui, quel que soit l\u2019espace o\u00F9 il s\u2019exprime ou les formes qu\u2019il prend, porte atteinte \u00E0 la dignit\u00E9 de la personne en raison de son caract\u00E8re d\u00E9gradant ou humiliant, et cr\u00E9e une situation intimidante, hostile ou offensante. Ces comportements n\u2019ont pas besoin d\u2019\u00EAtre r\u00E9p\u00E9t\u00E9s pour que l\u2019infraction soit caract\u00E9ris\u00E9e.\r\n        Mat\u00E9riellement, il peut s\u2019agir :\r\n        \r\n        de sifflements, des gestes et\/ou des bruits obsc\u00E8nes, par exemple en sugg\u00E9rant ou en imitant un acte sexuel ;\r\n        des propositions sexuelles ou de questions intrusives sur la vie sexuelle ;\r\n        de commentaires d\u00E9gradants sur le physique ou la tenue vestimentaire ;\r\n        de suivre un personne de mani\u00E8re insistante dans la rue.\r\n        L\u2019article 621-1 du code P\u00E9nal r\u00E9prime l\u2019outrage sexiste.\r\n        \r\n        Hors les cas de violence, d\u2019exhibition, de harc\u00E8lement sexuel ou moral, l\u2019outrage sexiste est le fait d\u2019imposer \u00E0 toute personne tout propos ou comportement \u00E0 connotation sexuelle ou sexiste qui :\r\n        \r\n        Soit porte atteinte \u00E0 sa dignit\u00E9 en raison de son caract\u00E8re d\u00E9gradant ou humiliant ;\r\n        Soit cr\u00E9e \u00E0 son encontre une situation intimidante, hostile ou offensante.\r\n        La peine encourue est une amende pr\u00E9vue pour les contraventions de 4\u00E8me classe (90 \u20AC en cas de paiement imm\u00E9diat et jusqu\u2019\u00E0 750 \u20AC) ou de 5\u00E8me classe (jusqu\u2019\u00E0 1.500 \u20AC) en cas de circonstances aggravantes ou de r\u00E9cidive.",
-    "contact.question" :"DES QUESTIONS ?",
-    "contact.answer" : "La manière la plus simple est de la posté sur ",
-    "filter.recent" : "Plus récent",
-    "filter.famous" : "Plus populaire",
-    "filter.commented" : "Plus commenté",
+    "backoffice.menu2.post.title": "Post",
+    "backoffice.menu2.post.count": "Nombre",
+    "backoffice.menu2.post.description": "Description",
+    "backoffice.menu2.post.action": "Action",
 
-    "post.delete" : "Supprimer le post",
-    "delete.comment" : "Supprimer le commentaire",
-    "delete.comment.confirm" : "Voulez vous supprimer ce post ?",
-    "post.add" : "Ajouter un post",
-    "delete.confirm" : "Voulez vous supprimer ce post ?",
-    "delete" : "Supprimer",
-    "cancel" : "Annuler",
-    "post.notfound" : "Aucun post trouvé",
-    "error.post.login" : "Veuillez vous connecter pour ajouter un post",
-    "comment.add" : "Ajouter un commentaire",
-    "comment.anonyme": "Commentaire anonyme",
-    "post.anonyme": "Post anonyme",
-    "post.title": "Titre",
-    "send" : "Envoyer",
+    "backoffice.menuUser.title":"Page Utilisateur",
+    "backoffice.menuUser.information":"Informations",
+    "backoffice.menuUser.firstname":"Prénom",
+    "backoffice.menuUser.lastname":"Nom",
+    "backoffice.menuUser.username":"Username",
+    "backoffice.menuUser.mail":"Mail",
+    "backoffice.menuUser.actions":"Actions",
+    "backoffice.menuUser.post":"Ses posts",
+    "backoffice.menuUser.comment":"Ses commentaires",
+    "backoffice.menuUser.modify":"Modifier informations",
+    "backoffice.menuUser.delete":"Supprimer l'utilisateur",
 
 
-    "error.commentValue" : "Veuillez saisir un commentaire",
-    "error.titleValue" : "Veuillez saisir un titre",
-    "error.descriptionValue" : "Veuillez saisir une description",
+    "error.commentValue": "Rentrer un commentaire",
+    "error.titleValue": "Veuillez rentrer un title",
+    "error.descriptionValue": "Veuillez rentrer un description",
+    "contact.question": "DES QUESTIONS?",
+    "contact.answer": "The easiest thing to do is post on our",
     "error.firstname" : "Prénom invalide",
-    "error.lastname" : "Nom de famille invalide",
-    "error.mail" : "Adresse mail invalide",
-    "error.username" : "Nom d'utilisateur invalide",
+    "error.lastname" : "Nom invalide",
+    "error.mail" : "Mail invalide",
+    "error.username" : "Username invalide",
     "error.password" : "Mot de passe invalide",
-    "error.passwordC" : "Les mots de passe ne correspondent pas",
-
-
-    "nocomment" : "Aucun post"
-
-
+    "error.passwordC" : "Les mots de passe ne correspondent pas"
 }
