correction of like system + remove comment

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -49,7 +49,7 @@
     "filter.recent": "Récent",
     "filter.famous": "Connu",
     "filter.commented": "plus commenté",
-    "filter.search": "Recherceh...",
+    "filter.search": "Recherche...",
     "addComment.label": "Ajout d'un commentaire",
     "addComment.textfield": "Commentaire",
     "addComment.send": "Envoyer",
