--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -136,15 +136,15 @@
     "backoffice.menu1.postC.edit.label": "Edit Category",
 
     
-    "backoffice.menu1.commmentC.title": "Comment Category",
-    "backoffice.menu1.commmentC.titlePage": "Manage Comment Category",
-    "backoffice.menu1.commmentC.field.description": "Description",
-    "backoffice.menu1.commmentC.field.couleur": "Color",
-    "backoffice.menu1.commmentC.field.action": "Action",
-    "backoffice.menu1.commmentC.create.label": "New Category",
-    "backoffice.menu1.commmentC.create.description": "Description",
-    "backoffice.menu1.commmentC.create.color": "Color",
-    "backoffice.menu1.commmentC.edit.label": "Edit Category",
+    "backoffice.menu1.commentC.title": "Comment Category",
+    "backoffice.menu1.commentC.titlePage": "Manage Comment Category",
+    "backoffice.menu1.commentC.field.description": "Description",
+    "backoffice.menu1.commentC.field.couleur": "Color",
+    "backoffice.menu1.commentC.field.action": "Action",
+    "backoffice.menu1.commentC.create.label": "New Category",
+    "backoffice.menu1.commentC.create.description": "Description",
+    "backoffice.menu1.commentC.create.couleur": "Color",
+    "backoffice.menu1.commentC.edit.label": "Edit Category",
 
     "backoffice.menu2": "Manage Reports",
     "backoffice.menu2.comment.title": "Comment report",
