--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -134,15 +134,15 @@
     "backoffice.menu1.postC.edit.label": "Modifier la catégorie",
 
     
-    "backoffice.menu1.commmentC.title": "Catégorie de commentaire",
-    "backoffice.menu1.commmentC.titlePage": "Gestino des catégories de commentaire",
-    "backoffice.menu1.commmentC.field.description": "Description",
-    "backoffice.menu1.commmentC.field.couleur": "Couleur",
-    "backoffice.menu1.commmentC.field.action": "Action",
-    "backoffice.menu1.commmentC.create.label": "Nouvelle Categorie",
-    "backoffice.menu1.commmentC.create.description": "Description",
-    "backoffice.menu1.commmentC.create.color": "Couleur",
-    "backoffice.menu1.commmentC.edit.label": "Modifier la catégorie",
+    "backoffice.menu1.commentC.title": "Catégorie de commentaire",
+    "backoffice.menu1.commentC.titlePage": "Gestion des catégories de commentaire",
+    "backoffice.menu1.commentC.field.description": "Description",
+    "backoffice.menu1.commentC.field.couleur": "Couleur",
+    "backoffice.menu1.commentC.field.action": "Action",
+    "backoffice.menu1.commentC.create.label": "Nouvelle Categorie",
+    "backoffice.menu1.commentC.create.description": "Description",
+    "backoffice.menu1.commentC.create.couleur": "Couleur",
+    "backoffice.menu1.commentC.edit.label": "Modifier la catégorie",
 
     "backoffice.menu2": "Gestion des signalements",
     "backoffice.menu2.comment.title": "Commentaires",
